# agentlife

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: basic_chat.py  demo_no_api.py  multi_step_agent.py  react_agent.py  react_agent_nsample.py  real_glm_agent.py
src/agentlife/: __init__.py  cli.py  collector.py  models.py  store.py
src/agentlife/patchers/: openai_patcher.py
src/agentlife/server/: app.py  routes.py
tests/: test_core.py
